Improved the logic of SKU generation and the semantics of classes Sku and Product